@@ -91,6 +91,8 @@
 	- use popt autohelp for rpm helper binaries.
 	- fix: avoid locale issues with strcasecmp/strncasecmp (#23199).
 	- remove almost all explicit uses of stderr in rpmlib using rpmError().
+	- fix: pass scriptlet args, as in %post -p "/sbin/ldconfig -n /lib".
+		(Rodrigo Barbosa)
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
